--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
     "manifest_version": 2,
     "name": "ForgeDirect",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "Directly download files from MinecraftForge",
     "icons": {
-        "16": "resources/images/icon16.png",
-        "48": "resources/images/icon48.png",
-        "128": "resources/images/icon128.png"
+        "16": "./images/icon16.png",
+        "48": "./images/icon48.png",
+        "128": "./images/icon128.png"
     },
     "browser_action": {
         "default_icon": {
-            "16": "resources/images/icon16.png",
-            "24": "resources/images/icon24.png",
-            "32": "resources/images/icon32.png"
+            "16": "./images/icon16.png",
+            "24": "./images/icon24.png",
+            "32": "./images/icon32.png"
         },
         "default_popup": "popup.html"
     },
@@ -20,7 +20,7 @@
     "content_scripts": [
         {
             "matches": ["*://files.minecraftforge.net/*"],
-            "js": ["resources/scripts/script.js"]
+            "js": ["./scripts/script.js"]
         }
     ],
     "homepage_url": "https://lxgaming.github.io/"
