--- a/.gitignore
+++ b/.gitignore
@@ -52,10 +52,12 @@ run
 .project
 .settings
 atlassian-ide-plugin.xml
+build.bat
+build.ps1
 build.xml
+local.properties
 nb-configuration.xml
 nbproject
-build.bat
 *.iml
 *.ipr
 *.iws
